missing text added to show guidance of Using Scenarios table

--- a/src/ShowGuidanceFiles/AddEditNodeDataEn.html
+++ b/src/ShowGuidanceFiles/AddEditNodeDataEn.html
@@ -223,6 +223,10 @@
 														<td></td>
 														<td>Modeling/Transfer/Extrapolation</td>
 													</tr>
+													<tr>
+														<td></td>
+														<td>Funnel Connections</td>
+													</tr>
 												</tbody>
 											</table>
 										</div>
