--- a/src/ShowGuidanceFiles/AddEditNodeDataFr.html
+++ b/src/ShowGuidanceFiles/AddEditNodeDataFr.html
@@ -171,6 +171,10 @@ a {
 															<td></td>
 															<td>Modeling/Transfer/Extrapolation</td>
 														</tr>
+														<tr>
+															<td></td>
+															<td>Connexions de l'entonnoir</td>
+														</tr>
 													</tbody>
 												</table>
 											</div>
