--- a/src/ShowGuidanceFiles/AddEditNodeDataPr.html
+++ b/src/ShowGuidanceFiles/AddEditNodeDataPr.html
@@ -182,6 +182,10 @@ a {
 																	<td></td>
 																	<td>Modelagem/Transferência/Extrapolação</td>
 																</tr>
+																<tr>
+																	<td></td>
+																	<td>Conexões de funil</td>
+																</tr>
 															</tbody>
 														</table>
 													</div>
