--- a/src/ShowGuidanceFiles/AddEditNodeDataSp.html
+++ b/src/ShowGuidanceFiles/AddEditNodeDataSp.html
@@ -180,6 +180,10 @@ a {
 														<td></td>
 														<td>Modelado/Transferencia/Extrapolación</td>
 													</tr>
+													<tr>
+														<td></td>
+														<td>Conexiones de embudo</td>
+													</tr>
 												</tbody>
 											</table>
 										</div>
