bugfixes of show guidance of Add/Edit Node

--- a/src/ShowGuidanceFiles/AddEditNodeDataEn.html
+++ b/src/ShowGuidanceFiles/AddEditNodeDataEn.html
@@ -117,8 +117,9 @@
 																	src="/aggregateAllowed.png" width="25px"></i></td>
 													</tr>
 													<tr>
-														<td style="background: #a7c6ed;color: #002f6c;"><b>Funnel
-																<i><img class="img-fluid" src="/funnel1-2.png"></i></b>
+														<td style="background:#002f6c;color: #fff;"><b>Funnel <i><img
+															src="../ShowGuidanceFiles/img/funnel1.png"
+															width="18" height="18" /></i></b>
 														</td>
 														<td>Sum of linked source nodes (<i><img
 																	src="/aggregateAllowed.png" width="24"></i>)</td>
@@ -137,7 +138,7 @@
 																		style="background-color: #002f6c;color: #fff;"><b>C</b></span>:Continuous
 																</li>
 																<li><span
-																		style="background-color: #002f6c;color: #fff;"><b>D</b></span>:Discrete
+																		style="background-color: #002f6c;color: #fff;"><b>d</b></span>:Discrete
 																</li>
 															</ul>
 														</td>
@@ -308,7 +309,7 @@
 													you override QAT’s calculation. </li>
 											</ul>
 											<li><b>Repeating Forecasting Usages? </b>If multiple Forecasting Unit nodes
-												share the same settings, consider using the Usage Template screen to
+												share the same settings, consider using the <a href="/#/usageTemplate/listUsageTemplate" target="_blank">Usage Template</a> screen to
 												save your common usages, and then using the “Copy from Template” field
 												to populate the fields in the forecasting unit nodes.
 											</li>
@@ -324,14 +325,14 @@
 											</li>
 											<b>Use cases: </b>
 											<ul>
-												<li>Viral Load tests are used by various populations, but all
+												<li><u>Viral Load tests</u> are used by various populations, but all
 													populations will use the same mix of instruments. Start with a
 													demographic tree which ends in multiple populations. The different
 													populations need to be summed and the various instrument branches
 													sit under the sum.
 												</li>
 												<li>
-													Malaria Patients enter the health system through different channels
+													<u>Malaria Patients</u> enter the health system through different channels
 													(community health workers vs public health facilities), which have
 													different testing algorithms, but once a patient tests positive,
 													they receive the same “mix” of treatments. The different populations
@@ -339,7 +340,7 @@
 													sit under the sum
 												</li>
 												<li>
-													Various Contraceptive Methods differ in how they are calculated, but
+													Various <u>Contraceptive Methods</u> differ in how they are calculated, but
 													they all derive from the same country population, which needs to be
 													updated each quantification, and may have modeling over time. One
 													tree can be built for implants and injectables, and another built
