--- a/src/ShowGuidanceFiles/AddEditNodeDataFr.html
+++ b/src/ShowGuidanceFiles/AddEditNodeDataFr.html
@@ -84,9 +84,7 @@ a {
 															src="/aggregateAllowed.png" width="25px"></i></td>
 													</tr>
 													<tr>
-														<td style="background: #a7c6ed;color: #002f6c;"><b>Entonnoir
-																<i><img class="img-fluid" src="/funnel1-2.png"></i></b>
-														</td>
+														<td style="background:#002f6c;color: #fff;"><b>Entonnoir <i><img src="../ShowGuidanceFiles/img/funnel1.png" width="18" height="18"/></i></b></td>
 														<td>Somme des nœuds sources liés
 															(<i><img
 																	src="/aggregateAllowed.png" width="24"></i>)</td>
@@ -103,7 +101,7 @@ a {
 																		style="background-color: #002f6c;color: #fff;"><b>C</b></span> :Continu
 																</li>
 																<li><span
-																		style="background-color: #002f6c;color: #fff;"><b>D</b></span>:Discret
+																		style="background-color: #002f6c;color: #fff;"><b>d</b></span>:Discret
 																</li>
 															</ul>
 														</td>
@@ -256,7 +254,7 @@ a {
 													vous remplacez le calcul de QAT. </li>
 											</ul>
 											<li><b>Utilisations répétées des prévisions ? </b>Si plusieurs nœuds d'unité de prévision
-												partagent les mêmes paramètres, pensez à utiliser l'écran Modèle d'utilisation pour
+												partagent les mêmes paramètres, pensez à utiliser l'écran <a href="/#/usageTemplate/listUsageTemplate" target="_blank">Modèle d'utilisation</a> pour
 												enregistrez vos utilisations courantes, puis en utilisant le champ « Copier à partir du modèle »
 												pour remplir les champs des nœuds de l'unité de prévision.
 											</li>
@@ -272,14 +270,14 @@ a {
 											</li>
 											<b>Cas d'utilisation : </b>
 											<ul>
-												<li>Les tests de charge virale sont utilisés par diverses populations, mais tous
+												<li><u></u>Les tests de charge virale</u> sont utilisés par diverses populations, mais tous
 													les populations utiliseront la même combinaison d’instruments. Commencez par un
 													arbre démographique qui se termine par plusieurs populations. Le différent
 													les populations doivent être additionnées et les différentes branches d'instruments
 													asseyez-vous sous la somme.
 												</li>
 												<li>
-													Les patients atteints du paludisme entrent dans le système de santé par différents canaux
+													<u>Les patients atteints du paludisme</u> entrent dans le système de santé par différents canaux
 													(agents de santé communautaires vs établissements de santé publics), qui ont
 													différents algorithmes de test, mais une fois qu'un patient est testé positif,
 													ils reçoivent le même « mélange » de traitements. Les différentes populations
@@ -287,7 +285,7 @@ a {
 													s'asseoir sous la somme
 												</li>
 												<li>
-													Différentes méthodes contraceptives diffèrent dans la manière dont elles sont calculées, mais
+													Différentes <u>méthodes contraceptives</u> diffèrent dans la manière dont elles sont calculées, mais
 													ils proviennent tous de la même population nationale, ce qui doit être
 													mis à jour chaque quantification, et peut avoir une modélisation au fil du temps. Un
 													un arbre peut être construit pour les implants et les injectables, et un autre construit
