Fixed UI for tree table show guidance

--- a/src/ShowGuidanceFiles/TreeTableFr.html
+++ b/src/ShowGuidanceFiles/TreeTableFr.html
@@ -85,7 +85,7 @@ a {
 													</tr>
 													<tr>
 														<td style="background: #a7c6ed;color: #002f6c;"><b>Entonnoir
-																<i><img class="img-fluid" src="/funnel.png"></i></b>
+																<i><img height="18px" src="/funnel.png"></i></b>
 														</td>
 														<td>Somme des nœuds sources liés
 															(<i><img
