--- a/src/ShowGuidanceFiles/TreeTableEn.html
+++ b/src/ShowGuidanceFiles/TreeTableEn.html
@@ -103,7 +103,7 @@ a {
 													</tr>
 													<tr>
 														<td style="background: #a7c6ed;color: #002f6c;"><b>Funnel
-																<i><img class="img-fluid" src="/funnel.png"></i></b>
+																<i><img height="18px" src="/funnel.png"></i></b>
 														</td>
 														<td>Sum of linked source nodes (<i><img
 																	src="/aggregateAllowed.png" width="24"></i>)</td>
