--- a/src/ShowGuidanceFiles/TreeTablePr.html
+++ b/src/ShowGuidanceFiles/TreeTablePr.html
@@ -86,7 +86,7 @@ a {
 														</tr>
 														<tr>
 															<td style="background: #a7c6ed;color: #002f6c;"><b>Funil
-																	<i><img class="img-fluid" src="/funnel.png"></i></b>
+																	<i><img height="18px" src="/funnel.png"></i></b>
 															</td>
 															<td>Soma dos nós de origem vinculados (<i><img
 																		src="/agregateAllowed.png" width="24"></i>)</td>
